--- a/static/css/app.css
+++ b/static/css/app.css
@@ -75,6 +75,34 @@ video, .action, .video-container, .upload-container, .input-container, canvas {
   z-index: 0;
 }
 
+.video-container button {
+  cursor: pointer;
+  background: white;
+  border: 0;
+  padding: 0;
+  margin: 0;
+  box-shadow: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 150px;
+  height: 150px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0.5;
+  transition: opacity 0.2s linear 0s;
+}
+
+.video-container button.hide {
+  opacity: 0;
+}
+
+.video-container button img {
+  width: 80px;
+  height: 80px;
+}
+
 canvas {
   // display: none;
 }
