--- a/static/css/app.css
+++ b/static/css/app.css
@@ -24,7 +24,7 @@ body {
 .colour-bar {
   position: relative;
   z-index: 10;
-  height: 4rem;
+  height: 3rem;
   background: white;
 }
 
@@ -44,6 +44,7 @@ body {
     bottom: 0;
     margin-left: 2rem;
     color: #2196F3;
+    font-size: 1.2rem;
     font-weight: 400;
   }
 
