--- a/static/css/app.css
+++ b/static/css/app.css
@@ -124,7 +124,7 @@ video, .action, .video-container, .upload-container, .input-container, canvas {
 }
 
 .container {
-  background: #ddd;
+  background: #eee;
   border-radius: 200px;
   overflow: hidden;
   display: flex;
@@ -299,7 +299,11 @@ canvas {
   height: 100%;
 }
 
+.file-upload + label img {
+  width: 30%;
+  height: 30%;
+}
+
 .file-upload:focus + label,
 .file-upload + label:hover {
-    background-color: red;
 }
