--- a/static/css/app.css
+++ b/static/css/app.css
@@ -26,9 +26,9 @@ canvas {
 }
 
 a {
-  color: #888;
   padding-bottom: 0.1rem;
   text-decoration: none;
+  color: currentcolor;
 }
 
   a:hover {
@@ -79,6 +79,7 @@ footer {
   text-align: center;
   margin-top: 2rem;
   padding: 1rem;
+  color: #ccc;
 }
 
   footer a {
@@ -200,9 +201,6 @@ video, .action, .video-container, .upload-container, .input-container, canvas {
   left: 0;
   width: 200px;
   height: 200px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   opacity: 0.5;
   transition: opacity 0.2s linear 0s;
 }
