--- a/public/css/app.css
+++ b/public/css/app.css
@@ -46,6 +46,12 @@ a {
   padding: 0;
   margin: 0;
   outline: none;
+  opacity: 1;
+  transition: opacity 0.4s linear 0s;
+}
+
+.btn.hide {
+  opacity: 0;
 }
 
 input[type=text] {
@@ -198,7 +204,7 @@ video, .action, .video-container, .upload-container, .input-container, canvas {
   display: flex;
 }
 
-.video-container button {
+.video-container button.take-photo {
   cursor: pointer;
   background: white;
   border: 0;
@@ -218,7 +224,7 @@ video, .action, .video-container, .upload-container, .input-container, canvas {
   opacity: 0;
 }
 
-.video-container button img {
+.video-container button.take-photo img {
   width: 80px;
   height: 80px;
 }
@@ -247,7 +253,8 @@ video, .action, .video-container, .upload-container, .input-container, canvas {
   height: 50px;
   width: 50px;
   border-radius: 50px;
-  color: transparent;
+  background-color: #eee;
+  color: #eee;
 }
 
   .colour--large {
