--- a/public/css/app.css
+++ b/public/css/app.css
@@ -168,7 +168,7 @@ video, .action, .video-container, .upload-container, .input-container, canvas {
 
 .action {
   position: relative;
-  overflow: scroll-x;
+  overflow: hidden;
   // border-radius: 150px;
   z-index: 0;
 }
