--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17,9 +17,12 @@ body {
   font-size: 12px;
   color: #444;
   font-weight: 400;
-  // overflow: hidden;
   margin: 0;
 }
+
+  body.body-fullscreen {
+    overflow: hidden;
+  }
 
 canvas {
   display: none;
@@ -243,9 +246,9 @@ video {
 }
 
 .video-container button.take-photo div {
-  width: 25px;
-  height: 25px;
-  border-radius: 25px;
+  width: 30px;
+  height: 30px;
+  border-radius: 30px;
   border: 1px solid #333;
 }
 
