--- a/public/css/app.css
+++ b/public/css/app.css
@@ -163,6 +163,11 @@ footer {
   margin: 2rem 0;
 }
 
+palette-actions {
+  width: 250px;
+  height: 250px;
+}
+
 video, .actions, .video-container, .upload-container, .input-container, canvas {
   position: relative;
   width: 200px;
